extensions/wikia/Venus/styles/article/article.scss
@import 'extensions/wikia/Venus/styles/article/images';
@import 'extensions/wikia/Venus/styles/article/media';
@import 'extensions/wikia/Venus/styles/mixins';
@import 'extensions/wikia/Venus/styles/modules/lightboxVenus';
@import 'extensions/wikia/Venus/styles/modules/throbberVenus';
@import 'extensions/wikia/Venus/styles/typographyMixins';
@import 'extensions/wikia/Venus/styles/variables';
@import 'skins/shared/color';
@import 'skins/shared/styles/infoboxes';

$placeholder-background-color: $color-left-article-nav; // only for prototype version
$article-items-spacing: 40px;

.article {
	overflow: hidden;

	header {
		@include grid-column-width('medium', 8, $medium-content-padding - $content-border-width);
		float: left;
		margin-bottom: $article-items-spacing;

		&.cover-unit {
			@include proportional-video-height(8 * ($medium-grid-column + $medium-grid-gutter) - $medium-grid-gutter + $medium-content-padding);
			background-color: $placeholder-background-color; //only for prototype version
			position: relative;

			h1 {
				position: absolute;
			}
		}

		h1 {
			@include font-size-xxl;
			bottom: 0;
			font-weight: bold;
			margin: 0;
			padding: 0 $medium-grid-column-padding 30px $medium-content-padding + $medium-grid-column-padding - $content-border-width;
			word-break: break-all;
		}
	}
}

.left-nav {
	margin-left: $medium-content-padding - $content-border-width;
	position: fixed;
	text-align: center;
	width: $medium-grid-column;

	ul {
		display: inline-block;
		list-style-type: none;
		margin: 0;
		padding: 0;
	}

	li {
		background-color: $color-left-article-nav;
		border-radius: 19px;
		height: 38px;
		margin-bottom: 6px;
		width: 38px;
	}
}

.mw-content-text {
	clear: left;
	margin: 0 $medium-grid-column + $medium-grid-gutter + $medium-content-padding - $content-border-width;
	padding: 0 $medium-grid-column-padding;

	.editsection {
		@include font-size-xxs;
		display: inline-block;
		float: right;
		line-height: 27px;
		margin-left: 27px;
		padding-left: 5px;
		position: relative;
		text-transform: uppercase;

		a::before {
			@include edit-button(27px);
		}
	}

	h1, h2, h3, h4, h5, h6 {
		font-weight: bold;
		overflow: hidden;
	}

	h1 .editsection {
		line-height: 40px;
		margin-left: 40px;

		a::before {
			@include resize-edit-button(40px);
		}
	}

	h2 {
		border-bottom: 1px solid $color-page-border;
		margin-bottom: 12px;
		margin-left: -$medium-grid-gutter;
		margin-right: -$medium-grid-gutter;
		margin-top: $article-items-spacing;
		padding-bottom: 10px;

		.mw-headline {
			padding-left: $medium-grid-gutter;
		}

		.editsection {
			line-height: 36px;
			margin-left: 36px;

			a::before {
				@include resize-edit-button(36px);
			}
		}
	}

	h3 {
		margin: $article-items-spacing 0 16px;
	}

	p {
		margin-bottom: $article-items-spacing;
		margin-top: 0;
	}

	blockquote {
		@include font-size-xl;
		border-top: 4px solid $color-text;
		margin: 0 0 $article-items-spacing;
		padding-top: 30px;
		position: relative;

		&:before {
			background: none repeat scroll 0 0 $color-page;
			content: '\201c';
			display: inline;
			font-size: 64px;
			height: 34px;
			line-height: 70px;
			padding-top: 8px;
			position: absolute;
			top: -33px;
		}
	}

	pre {
		white-space: normal;
	}

	ol,
	ul {
		padding-left: 41px;
	}

	> ol,
	> ul {
		margin-bottom: 40px;
		margin-top: 0;
		padding-right: 108px;

		> li:first-child {
			margin-top: 10px;
		}
	}

	ol {
		list-style-type: decimal;
	}

	ul {
		list-style-type: disc;
	}

	li {
		margin-top: 16px;
		padding-left: 13px;
	}

	dl {
		margin: 16px 0;
	}

	dt {
		font-weight: bold;
	}

	dd {
		margin-left: $medium-grid-column - 2 * $medium-grid-column-padding;
	}
}

/* FOR PROTOTYPE/TESTING ONLY */
.infobox-test {
	@include grid-column-width('medium', 4, -2 * $medium-grid-column-padding);
	background-color: $placeholder-background-color;
	clear: right;
	display: block;
	float: right;
	height: 500px;
	margin: 0 $medium-grid-column-padding + $medium-content-padding - $content-border-width 20px $medium-grid-gutter + $medium-grid-column-padding;
	padding: 10px;
}

/* END FOR PROTOTYPE/TESTING ONLY */

@media #{$large-up} {
	.article header {
		@include grid-column-width('large', 8, $large-content-padding - $content-border-width);

		&.cover-unit {
			@include proportional-video-height(8 * ($large-grid-column + $large-grid-gutter) - $large-grid-gutter + $large-content-padding);
		}

		h1 {
			padding-left: $large-grid-column-padding + $large-content-padding - $content-border-width;
			padding-right: $large-grid-column-padding;
		}
	}

	.left-nav {
		margin-left: $large-content-padding - $content-border-width;
		width: $large-grid-column;
	}

	.mw-content-text {
		margin: 0 $large-grid-column + $large-grid-gutter + $large-content-padding - $content-border-width;
		padding: 0 $large-grid-column-padding;

		h2 {
			margin-bottom: 10px;
			margin-left: -$large-grid-gutter;
			margin-right: -$large-grid-gutter;

			.mw-headline {
				padding-left: $large-grid-gutter;
			}
		}

		h3 {
			margin-bottom: 15px;
		}

		h2, h3 {
			margin-top: 30px;
		}

		p {
			margin-bottom: 30px;
		}

		ol,
		ul {
			padding-left: 43px;
		}

		> ol,
		> ul {
			padding-left: 44px;
			padding-right: 123px;
		}

		li {
			margin-top: 18px;
			padding-left: 14px;
		}

		dd {
			margin-left: $large-grid-column - 2 * $large-grid-column-padding;
		}
	}

	.infobox-test {
		@include grid-column-width('large', 4, -2 * $large-grid-column-padding);
		margin: 0 $large-grid-column-padding + $large-content-padding - $content-border-width 20px $large-grid-gutter + $large-grid-column-padding;
		padding: $large-grid-column-padding;
	}
}

@media #{$small-only} {
	.article header {
		float: none;
		width: 100%;

		&.cover-unit {
			@include proportional-video-height($small-content-width - 2 * $content-border-width);
		}

		h1 {
			padding-left: $small-grid-column-padding + $small-content-padding - $content-border-width;
			padding-right: $small-grid-column-padding + $small-content-padding - $content-border-width;;
		}
	}

	.left-nav {
		margin-left: $small-content-padding - $content-border-width;
		width: $small-grid-column;
	}

	.mw-content-text {
		margin: 0 $small-content-padding - $content-border-width 0 $small-grid-column + $small-grid-gutter + $small-content-padding - $content-border-width;
		padding: 0 $small-grid-column-padding;

		h2 {
			margin-left: -$small-grid-gutter;
			margin-right: -$small-grid-gutter;

			.mw-headline {
				padding-left: $small-grid-gutter;
			}
		}

		p {
			margin-bottom: 30px;
		}

		ol,
		ul {
			padding-left: 33px;
		}

		> ol,
		> ul {
			padding-right: 81px;
		}

		li {
			margin-top: 10px;
			padding-left: 4px;
		}

		dd {
			margin-left: $small-grid-column - 2 * $small-grid-column-padding;
		}
	}

	.infobox-test {
		@include grid-column-width('small', 5);
		margin: 0 $small-content-padding - $content-border-width 20px $small-grid-gutter + $small-grid-column-padding;
		padding: $small-grid-column-padding;
	}
}

